test/types/type_variables/deitz/test_clone_class1b.good
  called from test_clone_class1b.chpl:10
  called from test_clone_class1b.chpl:12
  called from test_clone_class1b.chpl:14
  called from test_clone_class1b.chpl:16
  called from test_clone_class1b.chpl:8
  called from test_clone_class1b.chpl:8
error: expression has mixed basic types:( int64 float64 null ) 
error: expression has mixed basic types:( int64 float64 null ) 
error: expression has mixed basic types:( int64 float64 null ) 
error: expression has mixed basic types:( int64 float64 null ) 
fail: fatal error, program does not type
test_clone_class1b.chpl:10: expression has mixed basic types:( int64 float64 null ) 
test_clone_class1b.chpl:14: expression has mixed basic types:( int64 float64 null ) 
test_clone_class1b.chpl:1: class foo:: 'x' has mixed basic types:( int64 float64 null ) 
test_clone_class1b.chpl:4: expression has mixed basic types:( int64 float64 null ) 
